# Othello

./: CMakeLists.txt  README.md  Rapport.md
include/: Board.hpp  OthelloWidget.hpp  PointsWidget.hpp  Solver.hpp  SolverSettingsDialog.hpp
src/: AutoCompare.cpp  Board.cpp  Main.cpp  OthelloWidget.cpp  PointsWidget.cpp  Solver.cpp
test_results/: 1.1.csv  1.2.csv  1.3.csv  1.4.csv  1.5.csv  2.1.csv  2.2.csv  2.3.csv  2.4.csv  2.5.csv  3.1.csv  3.2.csv  3.3.csv  3.4.csv  3.5.csv  4.1.csv  4.2.csv  4.3.csv  4.4.csv  4.5.csv  5.1.csv  5.2.csv  5.3.csv  5.4.csv  5.5.csv  6.1.csv  6.2.csv  6.3.csv  6.4.csv  6.5.csv  7.1.csv  7.2.csv  7.3.csv  7.4.csv  7.5.csv  8.1.csv  8.2.csv  8.3.csv  8.4.csv  8.5.csv
tests/: TestBoard.cpp  TestSolver.cpp  TestUtils.hpp
